--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context="kiyeon224.kr.hs.emirim.simplediary.MainActivity">
 
     <DatePicker
+        android:id="@+id/date_pick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
@@ -15,15 +16,18 @@
         />
 
     <EditText
+        android:id="@+id/edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lines="10"
         />
 
     <Button
+        android:id="@+id/but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:enabled="false"
         android:text="버튼1"
         />
 
